# CareerCopilot

./: .gitignore  pyproject.toml  resume.db
app/: main.py
app/api/: resumes.py
app/core/: settings.py
app/db/: session.py
app/models/: resume.py
app/schemas/: resumes.py
app/service/: llm_service.py  resumes_service.py
data/raw/: resume_sample_cn.txt
